updated the new style and resolved overflowing issue by providing different size for different screen heights

--- a/src/App.css
+++ b/src/App.css
@@ -78,13 +78,7 @@ body{
   padding: 3px;
 }
 
-.circle-div{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 20rem;
-  height: 11rem;
-}
+
 
 @media only screen  and (max-height: 667px) {
 
@@ -123,16 +117,6 @@ body{
   }
 }
 
-
-@media only screen  and (max-height: 660px) {
-  .circle-div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10rem;
-    height: 8rem;
-  }
-}
 
 
 
