--- a/src/Components/test/circle.css
+++ b/src/Components/test/circle.css
@@ -1,5 +1,29 @@
-.skill{
-    width: 50px;
-    height: 50px;
 
+.circle-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15rem;
+    height: 12rem;
+  }
+
+
+@media only screen  and (max-height: 660px) {
+    .circle-div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 9rem;
+      height: 7rem;
+    }
 }
+@media only screen  and (height: 720px) {
+    .circle-div{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 20rem;
+      height: 15rem;
+    }
+  }
+  
